[package]
name = "crusty"
version = "0.1.0"
authors = ["k.nebogin <kinebogin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
config = "0.11"

[build-dependencies]
protobuf-codegen-pure = "2.3"
glob = "0.3"