[package]
name = "crusty"
version = "0.1.0"
authors = ["k.nebogin <kinebogin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
config = "0.11"
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
mongodb = "2.0.0"

[build-dependencies]
tonic-build = "0.4"