[package]
name = "crusty"
version = "0.1.0"
authors = ["k.nebogin <kinebogin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
config = "0.13.2"
tonic = "0.8.2"
prost = "0.11.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
mongodb = "2.0.0"
flexi_logger = "0.23.3"
log = "0.4.17"
arangors = { version = "0.5.3", features = ["surf_async"], default-features = false }

[build-dependencies]
tonic-build = "0.8.2"